manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roommate-ingress
  namespace: roommate
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/limit-rps: "5"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "3"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - roommate.massivecreationlab.com
      secretName: roommate-tls
  rules:
    - host: roommate.massivecreationlab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: roommate
                port:
                  number: 80
